--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "url-shorten",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon .",
+    "init-db": "node db/init.js && prisma migrate dev"
   },
   "keywords": [],
   "author": "Arthur Lobo",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.3.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.14",
     "prisma": "^3.3.0"
   }
 }
