--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/index.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon .",
+    "dev": "nodemon . --dev",
     "init-db": "node db/init.js && prisma migrate dev"
   },
   "keywords": [],
