--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.16",
-    "prisma": "^3.13.0"
+    "prisma": "^3.13.0",
+    "typescript": "^4.6.4"
   }
 }
