--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "url-shorten",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "node .",
     "dev": "nodemon . --dev",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.31",
     "nodemon": "^2.0.16",
     "prisma": "^3.13.0",
     "typescript": "^4.6.4"
