--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/src/server/index.js",
   "scripts": {
     "start": "node .",
-    "build": "tsc",
+    "auto-build": "tsc --watch",
     "dev": "nodemon .",
     "init-db": "prisma migrate dev"
   },
