--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "nodemon": "^2.0.16",
